--- a/styles.css
+++ b/styles.css
@@ -24,9 +24,9 @@ body {
     padding: 15px 0 !important;
     z-index: 100;
     background-color: rgba(255,255,255,0.2) !important;
-    margin: 15px;
+    margin: 20px;
     border-radius: 15px;
-    transition: 0.5s;
+    transition: 0.2s ease-in-out;
 }
 
 .navbar-scrolled {
@@ -38,6 +38,20 @@ body {
 .navbar .menu-logo {
     width: 30px;
     height: 30px;
+}
+
+section:not(#inicio) {
+    padding: 50px 0;
+    background-color: white;
+}
+
+section h2 {
+    border: 2px solid #4d4d4d;
+    color: #4d4d4d;
+    border-radius: 15px;
+    display: inline-block;
+    padding: 15px;
+    margin-bottom: 50px;
 }
 
 section#inicio .bg {
@@ -71,15 +85,35 @@ section#inicio .bg h4 {
     color: lightgray;
 }
 
-section#servicios > div {
+
+
+section#servicios {
     background-color: #01588d;
+}
+
+section#servicios h2 {
+    color: lightyellow;
+    border-color: lightyellow;
+}
+
+section#servicios .menu {
+    padding-bottom: 0px;
+}
+
+section#servicios .content {
+    background-color: white;
 }
 
 section#servicios .menu a {
     color: white;
     padding: 15px;
-    border: 2px solid white;
+    border-top: 2px solid white;
+    border-left: 2px solid white;
+    border-right: 2px solid white;
+    margin: 0 5px;
     text-decoration: none;
+    position: relative;
+    display: inline-block;
 }
 
 section#servicios .menu a.active {
@@ -87,54 +121,16 @@ section#servicios .menu a.active {
     background-color: white;
 }
 
-#backTopBtn {
-    display: none;
-    /* Hidden by default */
-    position: fixed;
-    /* Fixed/sticky position */
-    bottom: 20px;
-    /* Place the button at the bottom of the page */
-    right: 30px;
-    /* Place the button 30px from the right */
-    z-index: 99;
-    /* Make sure it does not overlap */
-    border: none;
-    /* Remove borders */
-    outline: none;
-    /* Remove outline */
-    background-color: #0275d8;
-    /* Set a background color */
-    color: white;
-    /* Text color */
-    cursor: pointer;
-    /* Add a mouse pointer on hover */
-    width: 50px;
-    height: 50px;
-    border-radius: 10px;
-    /* Rounded corners */
-    font-size: 2rem;
-    /* Increase font size */
+section#servicios .servicio {
+    padding: 50px;
 }
 
 .modal .msg h1 {
     color: darkgreen;
 }
 
-#proyectos > div {
+section#proyectos > div {
     background-color: white;
-}
-
-section {
-    background-color: white;
-}
-
-section h2 {
-    border: 2px solid #4d4d4d;
-    color: #4d4d4d;
-    border-radius: 15px;
-    display: inline-block;
-    margin: 50px 0;
-    padding: 15px;
 }
 
 section#proyectos #lista-proyectos h4 {
@@ -149,16 +145,7 @@ section#proyectos img, section#proyectos video {
     border-radius: 15px;
 }
 
-section#habilidades .habilidad {
-    border-left: 3px solid black;
-    margin-top: 50px;
-}
 
-
-
-section#contacto {
-
-}
 
 footer .row {
     padding: 100px 0;
