--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ section#servicios .content {
 section#servicios .menu a {
     color: white;
     padding: 15px;
-    margin: 0 5px;
+    margin: 10px 5px 0px 5px;
     text-decoration: none;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
