--- a/styles.css
+++ b/styles.css
@@ -16,17 +16,13 @@
 
 html,
 body {
-    background-color: #272830;
+    /*background-color: #272830;*/
+    background-color: #fff;
     overflow-x: hidden;
 }
 
 .navbar {
-    padding: 15px 0 !important;
-    z-index: 100;
-    background-color: rgba(255,255,255,0.2) !important;
-    margin: 20px;
-    border-radius: 15px;
-    transition: 0.2s ease-in-out;
+    margin-bottom: 50px;
 }
 
 .navbar-scrolled {
@@ -48,10 +44,11 @@ section:not(#inicio) {
 section h2 {
     border: 2px solid #4d4d4d;
     color: #4d4d4d;
-    border-radius: 15px;
+    border-radius: 10px;
     display: inline-block;
-    padding: 15px;
+    padding: 7px;
     margin-bottom: 50px;
+    font-size: 1.5rem;
 }
 
 section#inicio .bg {
@@ -61,9 +58,10 @@ section#inicio .bg {
     background-color: white;
     background-image: url("assets/images/bg.jpg");
     width: 100%;
-    height: 100vh;
+    height: 25vh;
     background-position: center;
     background-size: cover;
+    margin-top: 50px;
 }
 
 section#inicio .bg > div {
@@ -87,8 +85,27 @@ section#inicio .bg h4 {
 
 
 
+section#message form {
+    max-width: 350px;
+    margin: 0 auto;
+}
+
+section#message div.sent {
+    width: 100px;
+    height: 100px;
+    border-radius: 150px;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    font-size: 3rem;
+    margin: 0 auto;
+}
+
+
+
 section#servicios {
     background-color: #01588d;
+    border-radius: 10px;
 }
 
 section#servicios h2 {
@@ -155,100 +172,20 @@ section#proyectos img, section#proyectos video {
 
 
 footer .row {
-    padding: 100px 0;
+    background-color: #01588d;
+    border-radius: 10px;
+    padding: 20px;
 }
 
-footer a:not(.disabled) i {
-    font-size: 5rem;
-    color: gray;
+footer a i {
+    font-size: 3rem;
+    color: white;
     transition: color 0.25s;
 }
 
-footer a:not(.disabled) i:hover {
-    color: skyblue;
-}
-
-footer a.disabled {
-    cursor: default;
-}
-
-footer a.disabled i {
-    color: #4d4d4d;
-    font-size: 5rem;
-}
-
 @media only screen and (min-width: 768px) {
-  footer a:not(.disabled) i, footer a.disabled i {
-      font-size: 3rem;
-  }
+  
 }
-
-
-
-.tooltip-inner {
-    background-color: skyblue;
-    box-shadow: 0px 0px 4px black;
-    opacity: 1 !important;
-    color: black;
-}
-.tooltip.bs-tooltip-right .tooltip-arrow::before {
-    border-right-color: skyblue !important;
-}
-.tooltip.bs-tooltip-left .tooltip-arrow::before {
-    border-left-color: skyblue !important;
-}
-.tooltip.bs-tooltip-bottom .tooltip-arrow::before {
-    border-bottom-color: skyblue !important;
-}
-.tooltip.bs-tooltip-top .tooltip-arrow::before {
-    border-top-color: skyblue !important;
-}
-
-
-
-.contactMeButton {
-    display: inline-block;
-    border-radius: 4px;
-    background-color: firebrick;
-    border: none;
-    color: #FFFFFF;
-    text-align: center;
-    font-size: normal;
-    padding: 20px;
-    width: 200px;
-    transition: all 0.5s;
-    cursor: pointer;
-}
-
-.contactMeButton:hover {
-    color: white;
-}
-
-.contactMeButton span {
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    transition: 0.5s;
-}
-
-.contactMeButton span:after {
-    content: '\00bb';
-    position: absolute;
-    opacity: 0;
-    top: 0;
-    right: -20px;
-    transition: 0.5s;
-}
-
-.contactMeButton:hover span {
-    padding-right: 25px;
-}
-
-.contactMeButton:hover span:after {
-    opacity: 1;
-    right: 0;
-}
-
 
 
 
