--- a/styles.css
+++ b/styles.css
@@ -130,6 +130,18 @@ section#message div.sent {
     position: absolute;
 }
 
+section#message div.fail {
+    width: 100px;
+    height: 100px;
+    border-radius: 150px;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    font-size: 3rem;
+    margin: 0 auto;
+    position: absolute;
+}
+
 
 
 section#servicios {
