--- a/styles.css
+++ b/styles.css
@@ -227,6 +227,11 @@ footer a i {
     transition: color 0.25s;
 }
 
+footer a#phone_number {
+    text-decoration: none;
+    color: white;
+}
+
 footer a#phone_number:hover {
     text-decoration: underline;
 }
