--- a/styles.css
+++ b/styles.css
@@ -236,6 +236,11 @@ footer a#phone_number:hover {
     text-decoration: underline;
 }
 
+footer .fa-whatsapp {
+    font-size: 2rem;
+    color: limegreen;
+}
+
 @media only screen and (min-width: 768px) {
   
 }
