--- a/styles.css
+++ b/styles.css
@@ -238,7 +238,8 @@ footer a#phone_number:hover {
 
 footer .fa-whatsapp {
     font-size: 2rem;
-    color: limegreen;
+    color: white;
+    background-color: limegreen;
 }
 
 @media only screen and (min-width: 768px) {
