--- a/styles.css
+++ b/styles.css
@@ -221,27 +221,35 @@ footer .row {
     padding: 20px;
 }
 
-footer a i {
-    font-size: 3rem;
+footer h3 > a {
+    background-color: limegreen;
+    display: inline-flex;
+    align-items: center;
     color: white;
-    transition: color 0.25s;
-}
-
-footer a#phone_number {
     text-decoration: none;
-    color: white;
+    font-size: 1.5rem;
 }
 
-footer a#phone_number:hover {
-    text-decoration: underline;
+footer h3 > a:hover {
+    color: #fff;
+}
+
+footer h3 > a:active {
+    background-color: #2DB82D;
+    transform: scale(0.95);
+}
+
+footer h3 > a:active .fa-whatsapp {
+    background-color: #2DB82D;
 }
 
 footer .fa-whatsapp {
-    font-size: 2rem;
+    font-size: 2.5rem;
     color: white;
     background-color: limegreen;
     padding: 5px;
     border-radius: 7px;
+    margin-right: 10px;
 }
 
 @media only screen and (min-width: 768px) {
