--- a/styles.css
+++ b/styles.css
@@ -222,20 +222,20 @@ footer .row {
 }
 
 footer h3 > a {
-    background-color: limegreen;
+    background-color: white;
     display: inline-flex;
     align-items: center;
-    color: white;
+    color: black;
     text-decoration: none;
     font-size: 1.5rem;
 }
 
 footer h3 > a:hover {
-    color: #fff;
+    color: #000;
 }
 
 footer h3 > a:active {
-    background-color: #2DB82D;
+    background-color: #e1e1e1;
     transform: scale(0.95);
 }
 
